AM_CFLAGS = -I$(top_srcdir)/src/
AM_LDFLAGS = -L$(top_builddir)/src/ -lspherical_harmonics -lm
check_PROGRAMS = 
dist_noinst_SCRIPTS =

#########
# l = 0 #
#########
check_PROGRAMS += spherical_harmonic_l0_m0
		
spherical_harmonic_l0_m0_SOURCES = $(srcdir)/spherical_harmonic_l0_m0.c
spherical_harmonic_l0_m0_CFLAGS  = $(AM_CFLAGS)
spherical_harmonic_l0_m0_LDFLAGS = $(AM_LDFLAGS)

dist_noinst_SCRIPTS += spherical_harmonic_l0_m0.sh

#########
# l = 1 #
#########
check_PROGRAMS += spherical_harmonic_l1_m0 \
		  spherical_harmonic_l1_mm1 \
		  spherical_harmonic_l1_mp1
		
spherical_harmonic_l1_m0_SOURCES = $(srcdir)/spherical_harmonic_l1_m0.c
spherical_harmonic_l1_m0_CFLAGS  = $(AM_CFLAGS)
spherical_harmonic_l1_m0_LDFLAGS = $(AM_LDFLAGS)

spherical_harmonic_l1_mm1_SOURCES = $(srcdir)/spherical_harmonic_l1_mm1.c
spherical_harmonic_l1_mm1_CFLAGS  = $(AM_CFLAGS)
spherical_harmonic_l1_mm1_LDFLAGS = $(AM_LDFLAGS)

spherical_harmonic_l1_mp1_SOURCES = $(srcdir)/spherical_harmonic_l1_mp1.c
spherical_harmonic_l1_mp1_CFLAGS  = $(AM_CFLAGS)
spherical_harmonic_l1_mp1_LDFLAGS = $(AM_LDFLAGS)

dist_noinst_SCRIPTS += spherical_harmonic_l1_m0.sh \
		       spherical_harmonic_l1_mm1.sh \
		       spherical_harmonic_l1_mp1.sh

#########
# l = 2 #
#########
check_PROGRAMS += spherical_harmonic_l2_m0 \
		  spherical_harmonic_l2_mm1 \
		  spherical_harmonic_l2_mp1 \
		  spherical_harmonic_l2_mm2 \
		  spherical_harmonic_l2_mp2
		
spherical_harmonic_l2_m0_SOURCES = $(srcdir)/spherical_harmonic_l2_m0.c
spherical_harmonic_l2_m0_CFLAGS  = $(AM_CFLAGS)
spherical_harmonic_l2_m0_LDFLAGS = $(AM_LDFLAGS)

spherical_harmonic_l2_mm1_SOURCES = $(srcdir)/spherical_harmonic_l2_mm1.c
spherical_harmonic_l2_mm1_CFLAGS  = $(AM_CFLAGS)
spherical_harmonic_l2_mm1_LDFLAGS = $(AM_LDFLAGS)

spherical_harmonic_l2_mp1_SOURCES = $(srcdir)/spherical_harmonic_l2_mp1.c
spherical_harmonic_l2_mp1_CFLAGS  = $(AM_CFLAGS)
spherical_harmonic_l2_mp1_LDFLAGS = $(AM_LDFLAGS)

spherical_harmonic_l2_mm2_SOURCES = $(srcdir)/spherical_harmonic_l2_mm2.c
spherical_harmonic_l2_mm2_CFLAGS  = $(AM_CFLAGS)
spherical_harmonic_l2_mm2_LDFLAGS = $(AM_LDFLAGS)

spherical_harmonic_l2_mp2_SOURCES = $(srcdir)/spherical_harmonic_l2_mp2.c
spherical_harmonic_l2_mp2_CFLAGS  = $(AM_CFLAGS)
spherical_harmonic_l2_mp2_LDFLAGS = $(AM_LDFLAGS)

dist_noinst_SCRIPTS += spherical_harmonic_l2_m0.sh \
		       spherical_harmonic_l2_mm1.sh \
		       spherical_harmonic_l2_mp1.sh \
		       spherical_harmonic_l2_mm2.sh \
		       spherical_harmonic_l2_mp2.sh

#########
# l = 3 #
#########
check_PROGRAMS += spherical_harmonic_l3_m0 \
		  spherical_harmonic_l3_mm1 \
		  spherical_harmonic_l3_mp1 \
		  spherical_harmonic_l3_mm2 \
		  spherical_harmonic_l3_mp2 \
		  spherical_harmonic_l3_mm3 \
		  spherical_harmonic_l3_mp3
		
spherical_harmonic_l3_m0_SOURCES = $(srcdir)/spherical_harmonic_l3_m0.c
spherical_harmonic_l3_m0_CFLAGS  = $(AM_CFLAGS)
spherical_harmonic_l3_m0_LDFLAGS = $(AM_LDFLAGS)

spherical_harmonic_l3_mm1_SOURCES = $(srcdir)/spherical_harmonic_l3_mm1.c
spherical_harmonic_l3_mm1_CFLAGS  = $(AM_CFLAGS)
spherical_harmonic_l3_mm1_LDFLAGS = $(AM_LDFLAGS)

spherical_harmonic_l3_mp1_SOURCES = $(srcdir)/spherical_harmonic_l3_mp1.c
spherical_harmonic_l3_mp1_CFLAGS  = $(AM_CFLAGS)
spherical_harmonic_l3_mp1_LDFLAGS = $(AM_LDFLAGS)

spherical_harmonic_l3_mm2_SOURCES = $(srcdir)/spherical_harmonic_l3_mm2.c
spherical_harmonic_l3_mm2_CFLAGS  = $(AM_CFLAGS)
spherical_harmonic_l3_mm2_LDFLAGS = $(AM_LDFLAGS)

spherical_harmonic_l3_mp2_SOURCES = $(srcdir)/spherical_harmonic_l3_mp2.c
spherical_harmonic_l3_mp2_CFLAGS  = $(AM_CFLAGS)
spherical_harmonic_l3_mp2_LDFLAGS = $(AM_LDFLAGS)

spherical_harmonic_l3_mm3_SOURCES = $(srcdir)/spherical_harmonic_l3_mm3.c
spherical_harmonic_l3_mm3_CFLAGS  = $(AM_CFLAGS)
spherical_harmonic_l3_mm3_LDFLAGS = $(AM_LDFLAGS)

spherical_harmonic_l3_mp3_SOURCES = $(srcdir)/spherical_harmonic_l3_mp3.c
spherical_harmonic_l3_mp3_CFLAGS  = $(AM_CFLAGS)
spherical_harmonic_l3_mp3_LDFLAGS = $(AM_LDFLAGS)

dist_noinst_SCRIPTS += spherical_harmonic_l3_m0.sh \
		       spherical_harmonic_l3_mm1.sh \
		       spherical_harmonic_l3_mp1.sh \
		       spherical_harmonic_l3_mm2.sh \
		       spherical_harmonic_l3_mp2.sh \
		       spherical_harmonic_l3_mm3.sh \
		       spherical_harmonic_l3_mp3.sh

#########
# l = 4 #
#########
check_PROGRAMS += spherical_harmonic_l4_m0 \
		  spherical_harmonic_l4_mm1 \
		  spherical_harmonic_l4_mp1 \
		  spherical_harmonic_l4_mm2 \
		  spherical_harmonic_l4_mp2 \
		  spherical_harmonic_l4_mm3 \
		  spherical_harmonic_l4_mp3 \
		  spherical_harmonic_l4_mm4 \
		  spherical_harmonic_l4_mp4
		
spherical_harmonic_l4_m0_SOURCES = $(srcdir)/spherical_harmonic_l4_m0.c
spherical_harmonic_l4_m0_CFLAGS  = $(AM_CFLAGS)
spherical_harmonic_l4_m0_LDFLAGS = $(AM_LDFLAGS)

spherical_harmonic_l4_mm1_SOURCES = $(srcdir)/spherical_harmonic_l4_mm1.c
spherical_harmonic_l4_mm1_CFLAGS  = $(AM_CFLAGS)
spherical_harmonic_l4_mm1_LDFLAGS = $(AM_LDFLAGS)

spherical_harmonic_l4_mp1_SOURCES = $(srcdir)/spherical_harmonic_l4_mp1.c
spherical_harmonic_l4_mp1_CFLAGS  = $(AM_CFLAGS)
spherical_harmonic_l4_mp1_LDFLAGS = $(AM_LDFLAGS)

spherical_harmonic_l4_mm2_SOURCES = $(srcdir)/spherical_harmonic_l4_mm2.c
spherical_harmonic_l4_mm2_CFLAGS  = $(AM_CFLAGS)
spherical_harmonic_l4_mm2_LDFLAGS = $(AM_LDFLAGS)

spherical_harmonic_l4_mp2_SOURCES = $(srcdir)/spherical_harmonic_l4_mp2.c
spherical_harmonic_l4_mp2_CFLAGS  = $(AM_CFLAGS)
spherical_harmonic_l4_mp2_LDFLAGS = $(AM_LDFLAGS)

spherical_harmonic_l4_mm3_SOURCES = $(srcdir)/spherical_harmonic_l4_mm3.c
spherical_harmonic_l4_mm3_CFLAGS  = $(AM_CFLAGS)
spherical_harmonic_l4_mm3_LDFLAGS = $(AM_LDFLAGS)

spherical_harmonic_l4_mp3_SOURCES = $(srcdir)/spherical_harmonic_l4_mp3.c
spherical_harmonic_l4_mp3_CFLAGS  = $(AM_CFLAGS)
spherical_harmonic_l4_mp3_LDFLAGS = $(AM_LDFLAGS)

spherical_harmonic_l4_mm4_SOURCES = $(srcdir)/spherical_harmonic_l4_mm4.c
spherical_harmonic_l4_mm4_CFLAGS  = $(AM_CFLAGS)
spherical_harmonic_l4_mm4_LDFLAGS = $(AM_LDFLAGS)

spherical_harmonic_l4_mp4_SOURCES = $(srcdir)/spherical_harmonic_l4_mp4.c
spherical_harmonic_l4_mp4_CFLAGS  = $(AM_CFLAGS)
spherical_harmonic_l4_mp4_LDFLAGS = $(AM_LDFLAGS)

dist_noinst_SCRIPTS += spherical_harmonic_l4_m0.sh \
		       spherical_harmonic_l4_mm1.sh \
		       spherical_harmonic_l4_mp1.sh \
		       spherical_harmonic_l4_mm2.sh \
		       spherical_harmonic_l4_mp2.sh \
		       spherical_harmonic_l4_mm3.sh \
		       spherical_harmonic_l4_mp3.sh \
		       spherical_harmonic_l4_mm4.sh \
		       spherical_harmonic_l4_mp4.sh

TEST_EXTENSIONS = .sh
SH_LOG_COMPILER = $(SHELL)

TESTS = $(dist_noinst_SCRIPTS)
